--- a/okyun-common/pom.xml
+++ b/okyun-common/pom.xml
@@ -113,6 +113,12 @@
             <artifactId>javax.servlet-api</artifactId>
         </dependency>
 
+        <!-- lombok 工具 -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
