--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <okyun.version>3.9.0</okyun.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
+        <java.version>17</java.version>
         <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
         <spring-boot.version>2.5.15</spring-boot.version>
         <druid.version>1.2.27</druid.version>
@@ -218,6 +218,13 @@
                 <version>${okyun.version}</version>
             </dependency>
 
+            <!-- models 税务处理模块 -->
+            <dependency>
+                <groupId>com.okyun</groupId>
+                <artifactId>okyun-models</artifactId>
+                <version>${okyun.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -228,6 +235,7 @@
         <module>okyun-quartz</module>
         <module>okyun-generator</module>
         <module>okyun-common</module>
+        <module>okyun-models</module>
     </modules>
     <packaging>pom</packaging>
 
